--- a/src/component/Thoughts.module.css
+++ b/src/component/Thoughts.module.css
@@ -1,3 +1,14 @@
+.youafit-arrow-link {
+  /* ...existing styles... */
+}
+
+@media (max-width: 600px) {
+  .youafit-arrow-link {
+    font-size: 0.95rem;
+    padding: 0.35em 0.8em;
+    margin-right: 3vw;
+  }
+}
 .thoughts-content-bg {
   position: relative;
   display: flex;
@@ -35,8 +46,8 @@
 
 }
 
+/* Default: stackable, not fixed */
 .youafit-arrow-link {
-   
   display: flex;
   align-items: center;
   background-color: white;
@@ -50,11 +61,11 @@
   z-index: 1000;
   transition: background 0.2s, color 0.2s;
   width: fit-content;
-  position: absolute;
-  right: 2vw;
-  bottom: 2vw;
-   font-family: 'Rubik', 'Arial', sans-serif;
+  margin-right: 2vw;
+  margin-left: auto;
 }
+
+
 .youafit-arrow-link:hover {
    background: #222;
   color: #fff;
